DONE: -All BUGs resolved -@GeneratedValue(strategy = GenerationType.TABLE) - behave like AUTO???